change to fixed height on mobile

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -420,7 +420,7 @@ form {
     cursor: pointer;
     background-position: center top;
     max-width: 480px;
-    height: auto;
+    height: 776px;
   }
   form{
     input[type=email],
